tests/spec/pass/membership_in_not_in.aja
nums = [1, 2, 3]
print(2 in nums)
print(5 in nums)
print(2 not in nums)
print(5 not in nums)

m = {"a": 1, "b": 2}
print("a" in m)
print("z" in m)
print("a" not in m)
print("z" not in m)

txt = "hello"
print("ell" in txt)
print("x" in txt)
print("ell" not in txt)
print("x" not in txt)
