tests/spec/fail/map_comp_non_iterable.aja
print({str(x): x for x in 1})
